fix: visible overflows
closes #114

Thanks @lydell

--- a/src/Line.css
+++ b/src/Line.css
@@ -20,7 +20,7 @@
 
 .Line .input.prompt {
   white-space: pre-wrap;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .Line .prompt:before {
@@ -136,5 +136,5 @@
 }
 
 .Line > .output > .type {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
